[gd_scene load_steps=3 format=3 uid="uid://bgm5ihlp2c5vb"]

[ext_resource type="Script" path="res://audio_system.gd" id="1_i67ai"]
[ext_resource type="PackedScene" uid="uid://cbhi8a5c8ngph" path="res://audio_event_emitter.tscn" id="2_gslp4"]

[node name="AudioSystem" type="Node2D"]
script = ExtResource("1_i67ai")

[node name="FmodBankLoader" type="FmodBankLoader" parent="."]
bank_paths = ["res://assets/Banks/byogamejam/Build/Desktop/Master.bank", "res://assets/Banks/byogamejam/Build/Desktop/Master.strings.bank", "res://assets/Banks/byogamejam/Build/Desktop/SFX.bank"]

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Audio Test Buddy
"

[node name="Button" type="Button" parent="."]
offset_left = 28.0
offset_top = 57.0
offset_right = 148.0
offset_bottom = 96.0
text = "Cursor Movement"

[node name="Button2" type="Button" parent="."]
offset_left = 36.0
offset_top = 108.0
offset_right = 168.0
offset_bottom = 144.0
text = "Hat Drop"

[node name="Button3" type="Button" parent="."]
offset_left = 32.0
offset_top = 160.0
offset_right = 164.0
offset_bottom = 196.0
text = "Bad Hat Drop"

[node name="Button4" type="Button" parent="."]
offset_left = 33.0
offset_top = 214.0
offset_right = 165.0
offset_bottom = 250.0
text = "Undo"

[node name="Button5" type="Button" parent="."]
offset_left = 33.0
offset_top = 261.0
offset_right = 165.0
offset_bottom = 297.0
text = "Hat Complete"

[node name="Button6" type="Button" parent="."]
offset_left = 34.0
offset_top = 315.0
offset_right = 166.0
offset_bottom = 351.0
text = "Judgy Abe"

[node name="Button7" type="Button" parent="."]
offset_left = 34.0
offset_top = 369.0
offset_right = 166.0
offset_bottom = 405.0
text = "Match Made"

[node name="Button8" type="Button" parent="."]
offset_left = 34.0
offset_top = 424.0
offset_right = 166.0
offset_bottom = 460.0
text = "UI Button Clicked"

[node name="AudioEventEmitter" parent="." instance=ExtResource("2_gslp4")]

[connection signal="pressed" from="Button" to="." method="_on_cursor_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_hat_drop_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_bad_hat_drop_button_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_hat_complete_button_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_judgy_abe_button_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_match_made_button_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_click_button_pressed"]
